discussion/kv_engine/175331/175331_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Cancel RangeScan that exceed some duration

A RangeScan cannot 'exist' indefinitely as storage cannot be released by
compaction. This commit adds a watch-dog task that is responsible
for 'force' cancelling any RangeScan that exists for longer than some
configuration defined duration (180 seconds by default).

This commit makes no attempt to allow a scan to complete even if it so
close to the end, when the time is up, the scan is cancelled. If the
scan is being continued at the time of cancellcation, a
RangeScanCancelled status is seen.

Change-Id: I409b00ab08772fa36af8f2fad83c0b083fe26165

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-06-10 16:12:41.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-10 16:23:19.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46771/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\range_scan_test.cc(1233): error C2660: "std::vector<std::pair<cb::rangescan::Id,MockCookie *>,std::allocator<_Ty>>::emplace_back": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46771/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18075/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15: error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
        scans.emplace_back(
              ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_vector.h:1212:2: note: candidate function [with _Args = <>] not viable: requires 0 arguments, but 1 was provided
        emplace_back(_Args&&... __args);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18075/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15:
error: no matching member function for call to "emplace_back" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18075/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7837/ : FAILURE

Compile error at [2022-06-10T16:19:22.673Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1241:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7837/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7734/ : FAILURE

Compile error at [2022-06-10T16:18:19.305Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7734/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19922/ : FAILURE

Compile error at [2022-06-10T16:15:44.400Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1241:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19922/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20272/ : FAILURE

Compile error at [2022-06-10T16:19:30.907Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1241:39:
error: no matching function for call to ?std::vector<std::pair<boost::uuids::uuid, MockCookie*> >::emplace_back(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20272/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20917/ : FAILURE

Compile error at [2022-06-10T16:17:19.768Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20917/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19126/ : FAILURE

Compile error at [2022-06-10T16:21:04.486Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19126/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28310/ : FAILURE

Compile error at [2022-06-10T16:19:23.262Z] ../kv_engine/engines/ep/tests/module_tests/range_scan_test.cc:1233:15:
error: no matching member function for call to "emplace_back"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28310/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17136/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39311/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
